# device-dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt  start.sh
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_app_settings.py
backend/: api.py  config.py  events.py  langsmith_link.py  logging_config.py  main.py  parser.py  poller.py  state.py  store.py  ws.py
backend/api/: dependencies.py  exception_handlers.py  middleware.py
connection-dashboard/: .env.example  .gitignore  README.md  pyproject.toml
connection-dashboard/backend/: api.py  grafana_client.py  langsmith_link.py  main.py  parser.py  poller.py  state.py  store.py
connection-dashboard/frontend/: package.json
connection-dashboard/frontend/src/components/: DetailDrawer.tsx  EventFeed.tsx
connection-dashboard/frontend/src/components/canvas/: ConnectionCanvas.tsx  DeviceNode.tsx
connection-dashboard/frontend/src/hooks/: useLayout.ts
connection-dashboard/frontend/src/utils/: dagreLayout.ts
connection-dashboard/tests/: test_parser.py  test_state.py
docs/: README.md  api.md  frontend.md  overview.md
docs/adr/: 001-react-flow-graph-engine.md  README.md  TEMPLATE.md
docs/bugs/: README.md  TEMPLATE.md
docs/changelog/: CHANGELOG.md
docs/features/: 001-realtime-dashboard.md  README.md  TEMPLATE.md
docs/guide/: api.md  architecture.md  (+5 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: run_pytest.py  typecheck_frontend.py
tests/: conftest.py
(+93 files in other folders)
