[project]
name = "connection-dashboard"
version = "0.1.0"
description = "Real-time dashboard tracking WeCom client ↔ AI server connections via Grafana Loki"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "httpx>=0.27",
    "requests>=2.31",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "langsmith>=0.1",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
